--- a/src/RecipeItem.css
+++ b/src/RecipeItem.css
@@ -57,11 +57,16 @@
 }
 
 
-.recipe   .flex img{
+.recipe   .flex .image{
     max-width: 453px;
     object-fit: cover;
   
     
+}
+
+.recipe  .flex .image  img{
+    width: 100%;
+    border-radius: 10px;
 }
 
 .recipe div .flex .content{
@@ -155,8 +160,9 @@ form input[type='submit']:hover{
 
 
 @media (max-width:1072px){
-    .recipe  div .flex img{
-        padding-top: 20px;
+    .recipe div .flex .imageMeal{
+        border-radius: 10px;
+        
     
     }
 
