--- a/src/Recipes.css
+++ b/src/Recipes.css
@@ -171,7 +171,12 @@
 
 .categorie  .categorie-flex img{
     width: 100%;
+    transition: all .5s;
     
+}
+
+.categorie  .categorie-img img:hover{
+    transform: scale(1.3);
 }
 
 .categorie  .categorie-content  {
