--- a/src/App.css
+++ b/src/App.css
@@ -2,24 +2,20 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
 }
 
 .App{
-text-align: center;
-
+  text-align: center;
+  
 }
 
 body{
-  /* background-image: url(./8Fg9vW.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover; */
   min-height: 100vh; 
   position: relative;
   background-attachment: fixed;
-
+  font-family: 'Poppins', sans-serif;
 }
-
 
 nav{
   background-color: rgba(49, 47, 47, 0.329);
@@ -33,6 +29,7 @@ nav{
   width: 100%;
   top: 0;
   z-index: 999999;
+  
   
 }
 
@@ -58,6 +55,20 @@ li{
 
 :link{
   text-decoration: none;
+}
+.logo{
+  font-size: 2.5rem;
+  background-color: #FFE53B;
+  background-image: linear-gradient(100deg, #fcdb5a 50%, #ffffff 5%);
+  background-size: 70%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: logo 5s infinite alternate;
+}
+
+@keyframes logo{
+  0%{background-position: -500%;}
+  100%{background-position: 500%;}
 }
 
 li:hover{
@@ -88,7 +99,7 @@ Footer a {
 
 
 .home{
-
+ 
 }
 
 
@@ -100,6 +111,7 @@ Footer a {
   color: black;
 
 }
+
 .home > .title h1{
   font-size: 4rem;
   font-weight: bolder;
