--- a/src/RecipeItem.css
+++ b/src/RecipeItem.css
@@ -1,8 +1,4 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+
 /* Hier RecipeItem +  RecipeName  */
 .recipeItem{
     background-image: url(./8Fg9vW.jpg);
@@ -26,9 +22,7 @@
     width: 70%;
     margin: auto;
     flex-wrap: wrap;
-    padding: 50px 0;
-    
-   
+    padding: 50px 0;   
     
 }
 
@@ -61,7 +55,6 @@
     max-width: 453px;
     object-fit: cover;
   
-    
 }
 
 .recipe  .flex .image  .imageMeal{
@@ -81,7 +74,6 @@
 
 .recipe div .flex .content h2{
     color: black;
-    
 }
 
 .recipe div .instructions{
@@ -101,9 +93,10 @@ table{
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 500px;
+    max-width: 700px;
     flex-wrap: wrap;
     padding: 15px 0;
+
     
 }
 
@@ -112,11 +105,13 @@ table{
     flex-direction: column;
     margin: 5px;
     padding: 5px;
+    width: 150px;
     justify-content: center;
     align-items: center;
-    
+    align-self: stretch;
     transition: all .5s;
-  
+   
+
    
 }
 
@@ -156,15 +151,16 @@ form input[type='text']{
 form input[type='submit'] {
     padding: 10px 20px;
     border: none;
-    color: white;
-    background-color: black;
+    color: black;
+    background-color: #fcdb5a;
     border-radius: 0 10px 10px 0;
     transition:  all .5s;
     cursor: pointer;
+    font-weight: bolder;
 }
 form input[type='submit']:hover{
-    background-color: white;
-    color: black;
+    background-color: black;
+    color: white;
 }
 
 
