--- a/src/Recipes.css
+++ b/src/Recipes.css
@@ -213,6 +213,7 @@
   background-size: cover; 
   background-attachment: fixed;
   z-index: -999;
+  min-height: 100vh;
 }
 
 .categoriesList-recipes {
@@ -227,9 +228,9 @@
 
 .categoriesList-flex{
     width: 300px;
-    height: 500px;
+    min-height: 500px;
     margin: 20px;
-    box-shadow: 0px 5px 5px black;
+    box-shadow: 5px 8px 8px black !important;
     color: black;
     background-color: rgb(255, 255, 255);
     position: relative;
@@ -237,9 +238,19 @@
     border: 2px solid #fcdb5a;
     z-index: 9999;
     
+
 }
 
-.categoriesList-flex::before{
+
+div[data-tilt]{
+   height: 500px !important;
+   box-shadow: 0 0 0 0 !important;
+   padding: 0 !important;
+
+   
+
+}
+/* .categoriesList-flex::before{
     content: '';
     position: absolute;
     top: -3px;
@@ -253,12 +264,14 @@
     transition: all .5s;
 
 
-}
+} */
 
-.categoriesList-flex:hover::before{
+/* .categoriesList-flex:hover::before{
     transform: rotate(0) skew(0);
+    
+} */
 
-}
+
 
 
 .categoriesList-flex img{
@@ -274,13 +287,17 @@
     justify-content: space-around;
     align-items: center;
     height: 200px;
-    
+    transform: perspective(1000px);
 
+}
+
+.categoriesList-content h2{
+    text-shadow: 0px 5px 2px rgba(0, 0, 0, 0.199);
+    font-size: 1.3rem;
 
 }
 
 .categoriesList-content p {
-   
     border: 2px solid #fcdb5a;
     border-radius: 30px;
     width: 150px;
@@ -289,11 +306,13 @@
     color: black;
     font-weight: 500;
     transition: all .5s;
-    
 
 }
+
+
 .categoriesList-content p:hover {
    background-color: #fcdb5a;
+
 }
 
 
